chore: api hooks

--- a/public/locales/fr/comingsoon.json
+++ b/public/locales/fr/comingsoon.json
@@ -1,7 +1,7 @@
 {
-  "iamavendor": "je suis un vendeur",
-  "iamadriver": "je suis chauffeur",
-  "iamacustomer": "je suis client",
+  "iamavendor": "Je suis un vendeur",
+  "iamadriver": "Je suis chauffeur",
+  "iamacustomer": "Je suis client",
   "subscribe": "Prévenez-moi",
   "Good things come to those who": "De bonnes choses arrivent à ceux qui",
   "Wait": "Attendre",
@@ -10,5 +10,12 @@
   "Enter your email address": "Entrez votre adresse e-mail",
   "Notify me": "Prévenez-moi",
   "Sign up for updates to be the first to know when we launch. No spam, just important information and exclusive offers.. ": " Inscrivez-vous aux mises à jour pour être les premiers à savoir quand nous lançons. Pas de spam, juste des informations importantes et des offres exclusives ..",
-  "chooseOptions": "Choisir les options qui s'appliquent à vous ?"
+  "chooseOptions": "Choisir les options qui s'appliquent à vous ?",
+  "We're putting the finishing touches on our website and getting ready to launch": {
+    " Sign up for updates and be the first to know when we go live": "",
+    "__i18n_ally_root__": {
+      " Sign up for updates and be the first to know when we go live": ""
+    }
+  },
+  "We": ""
 }
