chore: add translator on button

--- a/public/locales/fr/comingsoon.json
+++ b/public/locales/fr/comingsoon.json
@@ -17,5 +17,6 @@
       " Sign up for updates and be the first to know when we go live": ""
     }
   },
-  "We": ""
+  "We": "",
+  "Notify me when you launch": "Révenez-moi de votre lanceme"
 }
