--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -1,5 +1,5 @@
 {
-  "Mixer events is an all in one platform that provides services to party lovers, get hosts to create events and vendor to merchandize products quickly.": "Mixer events is an all in one platform that provides services to party lovers, get hosts to create events and vendor to merchandize products quickly.",
+  "Mixer events is an all in one platform that provides services to party lovers, get hosts to create events and vendor to merchandize products quickly":"Mixer events is an all in one platform that provides services to party lovers, get hosts to create events and vendor to merchandize products quickly.",
   "We are growing fast. Get daily update": "We are growing fast. Get daily update",
   "Follow us on social media": "Follow us on social media",
   "Mixer Events": "Mixer Events",
