--- a/public/locales/fr/footer.json
+++ b/public/locales/fr/footer.json
@@ -1,5 +1,5 @@
 {
-    "Mixer events is an all in one platform that provides services to party lovers, get hosts to create events and vendor to merchandize products quickly.":"Mixer events est une plateforme tout-en-un qui fournit des services aux amateurs de fêtes, permet aux hôtes de créer des événements et aux vendeurs de commercialiser rapidement des produits.",
+    "Mixer events is an all in one platform that provides services to party lovers, get hosts to create events and vendor to merchandize products quickly":"Mixer events est une plateforme tout-en-un qui fournit des services aux amateurs de fêtes, permet aux hôtes de créer des événements et aux vendeurs de commercialiser rapidement des produits.",
     "We are growing fast. Get daily update": "Nous sommes en pleine croissance. Obtenez des mises à jour quotidiennes",
     "Follow us on social media": "Suivez-nous sur les réseaux sociaux",
     "Mixer Events": "Mixer Events",
@@ -11,7 +11,7 @@
     "Contact Us": "Contactez nous",
     "About Us": "À propos de nous",
     "Support": "Soutien",
-    "FAQ": "FAQ",
+    "FAQ": "FAQ", 
     "Terms of Service": "Conditions d'utilisation",
     "Privacy Policy": "Politique de confidentialité",
     "Enter your email address": "Entrez votre adresse e-mail",
