--- a/public/locales/fr/authentication.json
+++ b/public/locales/fr/authentication.json
@@ -17,7 +17,9 @@
   "Forgot Password?": "Mot de passe oublié?",
   "Password must be at least 8 characters long": "Doit comporter au moins 8 caractères.",
   "Name": "Nom",
-  "Email": "Email",
+  "Email": "E-mail",
   "Password": "Mot de passe",
-  "Already have an account?": "Vous avez déjà un compte?"
+  "Already have an account?": "Vous avez déjà un compte?",
+  "enterFirstName": "Entrez votre prénom",
+  "enterLastName": "Entrer le nom de famille"
 }
