Chore: update VerificationForm & clean up

--- a/public/locales/en/codeVerification.json
+++ b/public/locales/en/codeVerification.json
@@ -2,5 +2,6 @@
   "Check your mail": "Check your mail",
   "Please enter the 6 digit code sent to": "Please enter the 6 digit code sent to",
   "Resend code in": "Resend code in",
-  "Confirm code": "Confirm code"
+  "Confirm code": "Confirm code",
+  "Didnt you get the code": "Didn't get the code"
 }
