--- a/public/locales/fr/codeVerification.json
+++ b/public/locales/fr/codeVerification.json
@@ -2,5 +2,6 @@
   "Check your mail": "Vérifier votre courrier",
   "Please enter the 6 digit code sent to": "Veuillez entrer le code à 6 chiffres envoyé à",
   "Resend code in": "Renvoyer le code dans",
-  "Confirm code": "Confirmer le code"
+  "Confirm code": "Confirmer le code",
+  "Didnt you get the code": "Tu n'as pas reçu le code"
 }
