--- a/public/locales/en/codeVerification.json
+++ b/public/locales/en/codeVerification.json
@@ -3,5 +3,5 @@
   "Please enter the 6 digit code sent to": "Please enter the 6 digit code sent to",
   "Resend code in": "Resend code in",
   "Confirm code": "Confirm code",
-  "Didn't get the code": "Didn't get the code",
+  "Didnt get the code": "Didn't get the code"
 }
