--- a/public/locales/en/dashboard.json
+++ b/public/locales/en/dashboard.json
@@ -2,5 +2,13 @@
     "Dashboard": "Dashboard",
     "Settings": "Settings",
     "Wallet Balance": "Wallet Ballance",
-    "Search": "Search"
+    "Search": "Search",
+    "Good Morning": "Good Morning",
+    "Good Afternoon": "Good Afternoon",
+    "Take a look at your store today": "Take a look at your store today",
+    "Total Visitors": "Total Visitors",
+    "Total Orders": "Total Orders",
+    "Sale": "Sale",
+    "Cancelled": "Cancelled",
+    "Statistics": "Statistics"
 }
