--- a/public/locales/fr/dashboard.json
+++ b/public/locales/fr/dashboard.json
@@ -2,5 +2,13 @@
     "Dashboard": "Tableau de bord",
     "Settings": "Paramètres",
     "Wallet Balance": "Solde du portefeuille",
-    "Search":  "Rechercher"
+    "Search":  "Rechercher",
+    "Good Morning": "Bonjour",
+    "Good Afternoon": "Bon après-midi",
+    "Take a look at your store today": "Jetez un coup d'oeil à votre boutique aujourd'hui",
+    "Total Visitors" : "Visiteurs totaux",
+    "Total Orders" : "Commande totale",
+    "Sale" : "Vente",
+    "Cancelled" : "Annulé",
+    "Statistics" : "Statistiques"
 }
