add pie chart and item cards

--- a/public/locales/en/dashboard.json
+++ b/public/locales/en/dashboard.json
@@ -1,14 +1,16 @@
 {
-    "Dashboard": "Dashboard",
-    "Settings": "Settings",
-    "Wallet Balance": "Wallet Ballance",
-    "Search": "Search",
-    "Good Morning": "Good Morning",
-    "Good Afternoon": "Good Afternoon",
-    "Take a look at your store today": "Take a look at your store today",
-    "Total Visitors": "Total Visitors",
-    "Total Orders": "Total Orders",
-    "Sale": "Sale",
-    "Cancelled": "Cancelled",
-    "Statistics": "Statistics"
+  "Dashboard": "Dashboard",
+  "Settings": "Settings",
+  "Wallet Balance": "Wallet Ballance",
+  "Search": "Search",
+  "Good Morning": "Good Morning",
+  "Good Afternoon": "Good Afternoon",
+  "Take a look at your store today": "Take a look at your store today",
+  "Total Visitors": "Total Visitors",
+  "Total Orders": "Total Orders",
+  "Sale": "Sale",
+  "Cancelled": "Cancelled",
+  "Statistics": "Statistics",
+  "Add Products": "Add Products",
+  "Best Selling": "Best Selling"
 }
