--- a/public/locales/fr/dashboard.json
+++ b/public/locales/fr/dashboard.json
@@ -10,5 +10,7 @@
     "Total Orders" : "Commande totale",
     "Sale" : "Vente",
     "Cancelled" : "Annulé",
-    "Statistics" : "Statistiques"
+    "Statistics" : "Statistiques",
+    "Add Products": "Ajouter des produits",
+    "Best Selling": "Meilleures ventes"
 }
