--- a/public/locales/fr/codeVerification.json
+++ b/public/locales/fr/codeVerification.json
@@ -3,5 +3,6 @@
   "Please enter the 6 digit code sent to": "Veuillez entrer le code à 6 chiffres envoyé à",
   "Resend code in": "Renvoyer le code dans",
   "Confirm code": "Confirmer le code",
-  "Didnt get the code": "N'as-tu pas reçu le code"
+  "Didnt get the code": "N'as-tu pas reçu le code",
+  "Your code has been confirmed successfully": "Votre code a été confirmé avec succès"
 }
