add table to dashboard

--- a/public/locales/en/dashboard.json
+++ b/public/locales/en/dashboard.json
@@ -12,5 +12,6 @@
   "Cancelled": "Cancelled",
   "Statistics": "Statistics",
   "Add Products": "Add Products",
-  "Best Selling": "Best Selling"
+  "Best Selling": "Best Selling",
+  "Recent Orders": "Recent Orders"
 }
