--- a/public/locales/fr/dashboard.json
+++ b/public/locales/fr/dashboard.json
@@ -12,5 +12,6 @@
     "Cancelled" : "Annulé",
     "Statistics" : "Statistiques",
     "Add Products": "Ajouter des produits",
-    "Best Selling": "Meilleures ventes"
+    "Best Selling": "Meilleures ventes",
+    "Recent Orders": "Commandes récentes"
 }
