--- a/public/locales/en/codeVerification.json
+++ b/public/locales/en/codeVerification.json
@@ -4,5 +4,6 @@
   "Resend code in": "Resend code in",
   "Confirm code": "Confirm code",
   "Didnt get the code": "Didn't get the code",
-  "Your code has been confirmed successfully": "Your code has been confirmed successfully"
+  "Your code has been confirmed successfully": "Your code has been confirmed successfully",
+  "Resend Code": "Resend Code"
 }
