--- a/public/locales/en/codeVerification.json
+++ b/public/locales/en/codeVerification.json
@@ -5,5 +5,7 @@
   "Confirm code": "Confirm code",
   "Didnt get the code": "Didn't get the code",
   "Your code has been confirmed successfully": "Your code has been confirmed successfully",
-  "Resend Code": "Resend Code"
+  "Resend Code": "Resend Code",
+  "Loading": "Loading",
+  "Your code confirmation has failed": "Your code confirmation has failed"
 }
