Fix: fix counterInput & clean up code

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,5 +15,7 @@
   "firstName": "First Name",
   "lastName": "Last Name",
   "thisFieldIsRequired": "This field is required",
-  "invalidEmail": "Invalid Email"
+  "invalidEmail": "Invalid Email",
+  "Add special instructions to restaurants": "Add special instructions to restaurants",
+  "Add to cart": "Add to cart"
 }
