Chore: Style component & clean up

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -16,5 +16,7 @@
   "invalidEmail": "Email invalide",
   "thisFieldIsRequired": "Ce champ est obligatoire",
   "streetAddress2": "Adresse municipale 2",
-  "hello world": "Bonjour le monde"
+  "hello world": "Bonjour le monde",
+  "Where": "Où",
+  "Search location": "Rechercher un lieu..."
 }
