--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,5 +15,7 @@
   "firstName": "First Name",
   "lastName": "Last Name",
   "thisFieldIsRequired": "This field is required",
-  "invalidEmail": "Invalid Email"
+  "invalidEmail": "Invalid Email",
+  "Where": "Where",
+  "Search location": "Search location..."
 }
