add coming soon

--- a/public/locales/en/comingsoon.json
+++ b/public/locales/en/comingsoon.json
@@ -11,5 +11,8 @@
   "Enter your email address": "Enter your email address",
   "Notify me": "Notify me",
   "Sign up for updates to be the first to know when we launch. No spam, just important information and exclusive offers.. ": "Sign up for updates to be the first to know when we launch. No spam, just important information and exclusive offers.. ",
-  "chooseOptions": "Choose options that applies to you?"
+  "chooseOptions": "Choose options that applies to you?",
+  "hugaryAlready": "Hungry already? We'll let you know when the meal is ready.",
+  "Home": "Home"
+
 }
