--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -16,5 +16,6 @@
   "invalidEmail": "Email invalide",
   "thisFieldIsRequired": "Ce champ est obligatoire",
   "streetAddress2": "Adresse municipale 2",
-  "hello world": "Bonjour le monde"
+  "hello world": "Bonjour le monde",
+  "Home": "Accueil"
 }
