--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -16,5 +16,7 @@
   "invalidEmail": "Email invalide",
   "thisFieldIsRequired": "Ce champ est obligatoire",
   "streetAddress2": "Adresse municipale 2",
-  "hello world": "Bonjour le monde"
+  "hello world": "Bonjour le monde",
+  "Add special instructions to restaurants": "Ajouter des instructions spéciales aux restaurants",
+  "Add to cart": "Ajouter au panier"
 }
