add changes to  header

--- a/public/locales/en/comingsoon.json
+++ b/public/locales/en/comingsoon.json
@@ -13,6 +13,6 @@
   "Sign up for updates to be the first to know when we launch. No spam, just important information and exclusive offers.. ": "Sign up for updates to be the first to know when we launch. No spam, just important information and exclusive offers.. ",
   "chooseOptions": "Choose options that applies to you?",
   "hugaryAlready": "Hungry already? We'll let you know when the meal is ready.",
-  "Home": "Home"
-
+  "Home": "Home",
+  "Count me in": "Count me in"
 }
