add button chnages

--- a/public/locales/en/comingsoon.json
+++ b/public/locales/en/comingsoon.json
@@ -17,5 +17,6 @@
   "Count me in": "Count me in",
   "Great_All_Set": "Great, All set!",
   "Now_Stay_Tuned": "Now stay tuned, we'll notify you about all the updates.",
-  "Done": "Done"
+  "Done": "Done",
+  "CountMeIn": "Count Me In"
 }
