--- a/public/locales/fr/comingsoon.json
+++ b/public/locales/fr/comingsoon.json
@@ -24,5 +24,6 @@
   "Count me in": "comptez sur moi",
   "Great_All_Set": "Super, tout est prêt !",
   "Now_Stay_Tuned": "Restez à l'écoute, nous vous informerons de toutes les mises à jour.",
-  "Done": "Terminé"
+  "Done": "Terminé",
+  "CountMeIn": "comptez sur moi"
 }
