--- a/public/locales/en/comingsoon.json
+++ b/public/locales/en/comingsoon.json
@@ -26,5 +26,7 @@
   "To cater to the diverse residents of Vancouver": "To cater to the diverse residents of Vancouver, we saw an opportunity in the market to provide a marketplace for vendors to sell homemade meals that are affordable and not readily available in traditional restaurants. ",
   "is a food delivery service that offers": "is a food delivery service that offers freshly made meals to customers. Our platform works with local home chefs to provide a diverse selection of dishes made with quality ingredients, ranging",
   "HomeChow": "HomeChow",
-  "from classic comfort food to international cuisine": "from classic comfort food to international cuisine. Our focus is on personalized customer service and a convenient ordering experience. Our platform is designed to be easy to use, allowing customers to order with just a few clicks through our website or mobile app."
+  "from classic comfort food to international cuisine": "from classic comfort food to international cuisine. Our focus is on personalized customer service and a convenient ordering experience. Our platform is designed to be easy to use, allowing customers to order with just a few clicks through our website or mobile app.",
+  "uh_oh": "Uh oh.",
+  "Something went wrong Kindly try again": "Something went wrong Kindly try again"
 }
