Feat: create chefProfileCard component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -23,6 +23,7 @@
   "common": {
     "View Store": "View Store",
     "Out of stock": "Out of stock",
-    "In stock": "In stock"
+    "In stock": "In stock",
+    "Schedule": "Schedule"
   }
 }
