Style: update card stylies follow design

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -24,6 +24,9 @@
     "View Store": "View Store",
     "Out of stock": "Out of stock",
     "In stock": "In stock",
-    "Schedule": "Schedule"
+    "Schedule": "Schedule",
+    "By": "By",
+    "mins": "mins",
+    "Deliver Price": "Deliver Price"
   }
 }
