--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -25,6 +25,9 @@
     "View Store": "Voir magasin",
     "Out of stock": "Rupture de stock",
     "In stock": "En stock",
-    "Schedule": "Calendrier"
+    "Schedule": "Calendrier",
+    "By": "Par",
+    "mins": "minutes",
+    "Deliver Price": "Prix ​​de livraison"
   }
 }
