Feat: create new vendorCard component & styling

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -23,6 +23,9 @@
   "common": {
     "View Store": "View Store",
     "Out of stock": "Out of stock",
-    "In stock": "In stock"
+    "In stock": "In stock",
+    "NEW": "NEW",
+    "Deliver Price": "Deliver Price",
+    "mins": "mins"
   }
 }
