--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -24,6 +24,9 @@
   "common": {
     "View Store": "Voir magasin",
     "Out of stock": "Rupture de stock",
-    "In stock": "En stock"
+    "In stock": "En stock",
+    "NEW": "NOUVEAU",
+    "Deliver Price": "Prix ​​de livraison",
+    "mins": "minutes"
   }
 }
